Update configuration handling.

--- a/configs/config-2.3.0a8.json
+++ b/configs/config-2.3.0a8.json
@@ -14,7 +14,8 @@
                 "args": [],
                 "static": false,
                 "overloads": false
-            }
+            },
+            "_makeTree": false
         },
         "IDownloadManager": {
             "[bases]": [
