--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,11 @@ max-line-length = 88
 extend-ignore =
     # See https://github.com/PyCQA/pycodestyle/issues/373
     E203,
+per-file-ignores =
+  *.pyi: E301, E302, E305, E501, E701, E741, F401, F403, F405, F822
+  # Since typing.pyi defines "overload" this is not recognized by flake8 as typing.overload.
+  # Unfortunately, flake8 does not allow to "noqa" just a specific error inside the file itself.
+  typing.pyi: E301, E302, E305, E501, E701, E741, F401, F403, F405, F811, F822
 
 [mypy]
 warn_return_any = True
