--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -14,21 +14,23 @@ jobs:
     - uses: actions/checkout@v1
     # Standard drop-in approach that should work for most people.
     - uses: ammaraskar/sphinx-action@master
+      env:
+        PYTHONPATH: .
       with:
-        pre-build-command: "cp ../stubs/2.3.0/mobase.pyi ./mobase.py && pip install sphinx-rtd-theme sphinx-autodoc-typehints sphinx-automodapi"
+        pre-build-command: "apt-get update -y && apt-get install -y libgl1-mesa-glx && cp stubs/2.3.0/mobase.pyi docs/mobase.py"
         docs-folder: "docs/"
 
     # Publish built docs to gh-pages branch.
     # ===============================
     - name: Commit documentation changes
       run: |
-        git clone https://github.com/ModOrganizer2/mo2-pystubs-generation.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/_build/html/* gh-pages/
+        git clone https://github.com/Holt59/mo2-pystubs-generation.git --branch gh-pages --single-branch gh-pages
+        cp -r docs/build/html/* gh-pages/
         cd gh-pages
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Update documentation" -a || true
+        git commit -m "Update documentation." -a || true
         # The above command will fail if no changes were present, so we ignore
         # that.
 
