--- a/configs/config-2.4.yml
+++ b/configs/config-2.4.yml
@@ -16,7 +16,7 @@ ignores:
 mobase:
 
   # Version of the stubs.
-  __version__: 2.3.2.post2
+  __version__: 2.4.0.alpha1
 
   getFileVersion:
     __doc__: Retrieve the file version of the given executable.
