Switch to official pypi.

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -37,4 +37,4 @@ jobs:
         cd stubs/setup
         cp ../${{ steps.version.outputs.replaced }}/mobase.pyi mobase-stubs/__init__.pyi
         python setup.py sdist bdist_wheel
-        twine upload -r testpypi dist/*
+        twine upload dist/*
